--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,93 @@ line-height: 1.5;
 letter-spacing: 0.72px;
 padding: 22px 67px 22px 34px;
 }
+.information-list{
+    display: flex;
+width: 1200px;
+height: 395px;
+justify-content: center;
+align-items: flex-start;
+flex-shrink: 0;
+}
+.information-item{
+    width: 400px;
+    height: 395px;
+    flex-shrink: 0;
+}
+.information-title{
+    color:var(--title);
+text-align: center;
+font-family: "DM Serif Display";
+font-size: 25px;
+font-weight: 400;
+line-height: 1.56;
+letter-spacing: 0.22px;
+}
+.information-text{
+ color:var(--text);
+text-align: center;
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+}
+.information-button{
+    background-color: var(--main);
+    color:var(--text);
+text-align: center;
+font-family: Jost;
+font-size: 18px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.36px;
+border: none;
+}
+.title-one{
+    margin: 75px 113px 17px 113px;
+}
+.text-one{
+    margin: 0px 41px 48px 42px;
+}
+.button-one{
+    padding: 20px 128px 0px 98px;
+    margin: 0px 40px 70px 40px;
+}
+.title-two{
+    margin: 75px 144px 17px 144px;
+}
+.text-two{
+    margin: 0px 51px 15px 52px;
+}
+.button-two{
+    padding: 20px 128px 0px 98px;
+    margin: 0px 40px 103px 40px;
+}
+.title-three{
+    margin: 75px 151px 17px 151px;
+}
+.text-three{
+    margin: 0px 52px 15px 52px;
+}
+.button-three{
+    padding: 20px 128px 0px 98px;
+    margin: 0px 40px 70px 40px;
+}
+.main-information{
+    margin-top: 100px; 
+    margin-bottom: 100px;
+}
+.recommendation-title{
+    color:var(--title);
+font-family: "DM Serif Display";
+font-size: 50px;
+font-weight: 400;
+line-height: 1.3;
+letter-spacing: 0.22px;
+}
+.recommendation-text{
+    color:var(--text);
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+}
