--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ letter-spacing: 0.4px;
     background-size: 1440px 831px ;
 }
 .hero-box{
+    height: 831px;
     justify-content: center;
     padding-top: 188px;
 }
@@ -158,13 +159,9 @@ border: none;
     margin-top: 100px; 
     margin-bottom: 100px;
 }
-.main-recommendation{
+ .recommendation{
     height: 634.609px;
-    background-image: url(../img/kitchen.png);
-    background-repeat: no-repeat;
-    background-position:right;
-    background-size: 592px 635px;
-}
+ }
 .recommendation-title{
     color:var(--title);
 font-family: "DM Serif Display";
@@ -180,3 +177,92 @@ font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.22px;
 }
+.recommendation-button{
+    color:var(--main);
+font-size: 18px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.72px;
+    padding: 21px 67px 23px 34px;
+    border-radius: 18px;
+border: 2px solid var(--title);
+background:var(--title);
+}
+.recommendation-img{
+    width: 592px;
+height: 635px;
+flex-shrink: 0;
+}
+.main-review{
+    margin-top: 139.39px;
+}
+.review-box{
+    border-radius: 70px;
+background:var(--background);
+height: 675px;
+}
+.review-title{
+    color:var(--title);
+text-align: center;
+font-family: "DM Serif Display";
+font-size: 45px;
+font-weight: 400;
+line-height: 1.3;
+letter-spacing: 0.22px;
+}
+.review-subject{
+    padding-top: 103px;
+}
+.review-heading{
+    padding-bottom: 47px;
+}
+.reviews-list{
+display: flex;
+gap: 18px;
+}
+.review-item{
+    width: 354px;
+height: 287px;
+flex-shrink: 0;
+border-radius: 30px;
+background:var(--main);
+}
+.reviews-title{
+    color:var(--title);
+font-family: "DM Serif Display";
+font-size: 25px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+}
+.reviews-usa::before{
+    content: "";
+    display: block;
+background-image: url(../img/lisausa.png);
+}
+.reviews-australia::before{
+    content: "";
+    display: block;
+    background-image: url(../img/davidaustralia.png)
+}
+.reviews-france::before{
+    content: "";
+    display: block;
+    background-image: url(../img/lisafrance.png)
+}
+.reviews-subtitle{
+    color:var(--text);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.22px;
+}
+.reviews-text{
+    color:var(--text);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.22px;
+    margin: 32px 75px 45px 35px;
+}
+
