--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,89 @@ border-radius: 100px;
 background:var(--background);
 border: none;
 }
+.main-statistics{
+    background:var(--background);
+}
+.statistics-box{
+    width: 1200px;
+    height: 475px;
+    flex-shrink: 0; 
+}
+.statistics-list{
+    display: flex;
+    gap: 18px;
+}
+.statistics-item{
+    width: 288px;
+height: 195px;
+flex-shrink: 0;
+margin: 139.98px 0px 140.02px 0px;
+border-right: var(--rare) solid 1px;
+}
+.statistics-item:nth-child(4){
+    border: none;
+}
+.statistics-title{
+    color:var(--rare);
+text-align: center;
+font-family: "DM Serif Display";
+font-size: 85px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 1.7px;
+}
+.statistics-text{
+    color:var(--text);
+text-align: center;
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+}
+.main-blogs{
+    margin-top: 130px;
+}
+.blogs-div{
+    display: flex;
+width: 1200px;
+padding-top: 15px;
+flex-direction: column;
+justify-content: flex-end;
+align-items: center;
+gap: 70px;
+}
+.blog-box{
+    width: 1200px;
+height: 148px;
+}
+.blogs-box{
+    width: 1220px;
+    height: 1110.781px;
+}
+.blog-title{
+    color:var(--title);
+text-align: center;
+font-family: "DM Serif Display";
+font-size: 48px;
+font-weight: 400;
+line-height: 1.3;
+letter-spacing: 0.22px;
+margin-bottom: 21px;
+}
+.blog-text{
+    color:var(--text);
+text-align: center;
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+}
+.{
+    
+}
+.{
+    
+}
 .{
     
 }
