--- a/css/style.css
+++ b/css/style.css
@@ -420,7 +420,6 @@ border: none;
     background:var(--background);
 }
 .statistics-box{
-    width: 1200px;
     height: 475px;
     flex-shrink: 0; 
 }
@@ -460,7 +459,6 @@ letter-spacing: 0.22px;
 }
 .blogs-div{
     display: flex;
-width: 1200px;
 padding-top: 15px;
 flex-direction: column;
 justify-content: flex-end;
@@ -493,11 +491,128 @@ font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.22px;
 }
-.{
-    
+.blogs-list{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
 }
-.{
-    
+.blogs-item{
+    width: 387px;
+    height: 515px;
+    flex-shrink: 0; 
+    flex-basis: calc((100% - 40px) / 3);
+    border-radius: 62px;
+border: 1px solid var(--border-item);
+}
+.blogs-text{
+    color:var(--text);
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+padding: 232px 206px 40px 34px;
+margin: 21px 21px 15px 21px;
+}
+.blogs-title{
+    color:var(--title);
+font-family: "DM Serif Display";
+font-size: 25px;
+font-weight: 400;
+line-height: 1.4;
+letter-spacing: 0.5px;
+margin-left: 21px;
+margin-right: 32px;
+margin-bottom: 10.41px;
+}
+.blog-div{
+    display: inline-flex;
+padding: 9.594px 0px 0.406px 0px;
+justify-content: center;
+align-items: center;
+gap: 149px;
+margin: 0px 21.34px 40.59px 21px;
+}
+.blogs-kitdes{
+    background-image: url(../img/kitchendesign.png) ;
+    background-repeat: no-repeat;
+    background-size: 345px 296px;
+}
+.blogs-livrm{
+    background-image:url(../img/livingroom.png) ;
+    background-repeat: no-repeat;
+}
+.blogs-minint{
+    background-image:url(../img/minimalistinterior.png) ;
+    background-repeat: no-repeat;
+}
+.blogs-deskit{
+    background-image:url(../img/designkitchen.png) ;
+    background-repeat: no-repeat;
+}
+.blogs-rmliv{
+    background-image:url(../img/roomliving.png) ;
+    background-repeat: no-repeat;
+}
+.blogs-intmin{
+    background-image:url(../img/interiorminimalist.png) ;
+    background-repeat: no-repeat;
+}
+
+.blogs-world{
+    color:var(--text);
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+}
+.blogs-button{
+    width: 52px;
+height: 52px;
+flex-shrink: 0;
+border-radius: 100px;
+background:var(--background);
+border: none;
+}
+.consultation-box{
+    border-radius: 70px;
+background:var(--title);
+height: 414px;
+padding-top: 100px;
+}
+.consultation-title{
+    color:var(--main);
+    text-align: center;
+    font-family: "DM Serif Display";
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.22px; 
+    margin-bottom: 9px;
+}
+.consultation-text{
+    color:var(--main);
+text-align: center;
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+margin-bottom: 31px;
+}
+.consultation-button{
+    color:var(--main);
+font-size: 18px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+padding: 21px 67px 23px 34px;
+margin: 0px 485px 95px;
+border-radius: 18px;
+border: none;
+background-color: var(--rare);
+width: 241px;
+height: 71px;
+flex-shrink: 0;
+
 }
 .{
     
