--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body{
 }
 .container{
     width: 1230px;
-    outline: 1px solid red;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
@@ -622,12 +621,10 @@ flex-shrink: 0;
 
 .footer{
     display: flex;
-width: 1440px;
 padding-top: 50px;
 flex-direction: column;
 justify-content: flex-end;
 align-items: center;
-gap: -1px;
 }
 .gids-box{
     display: flex;
@@ -666,34 +663,122 @@ gap: 40px;
 .pages-item{
     display: flex;
 width: 210.719px;
-padding: 0px 60px 0px 0px;
+padding: 0px 60px 30px 0px;
 flex-direction: column;
 align-items: flex-start;
+gap: 21.797px;
 }
 .pages-title{
-    margin-bottom: 21.797px;
+    color:var(--title);
+    font-family: "DM Serif Display";
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.22px;
+}
+.pages-box{
+    display: flex;
+width: 150.719px;
+height: 285px;
+padding-right: 37.078px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 30px;
+}
+.pages-text{
+    display: flex;
+width: 150.719px;
+height: 285px;
+padding-right: 37.078px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 30px;
+}
+
+.explore-item{
+    display: flex;
+width: 210.719px;
+padding: 0px 60px 30px 0px;
+flex-direction: column;
+align-items: flex-start;
+gap: 21.797px;
+}
+.explore-title{
     color:var(--title);
 font-family: "DM Serif Display";
 font-size: 25px;
 font-weight: 400;
-line-height: 1.5px
+line-height: 37.5px; /* 150% */
 letter-spacing: 0.22px;
 }
-.pages-text{
-    margin-bottom: 30px;
+.explore-box{
+    display: flex;
+width: 150.719px;
+height: 285px;
+padding-right: 26.797px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 30px;
+}
+.explore-text{
     color:var(--text);
 font-size: 22px;
-font-style: normal;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.22px;
 }
-.{
-    
+.contact-item{
+    display: flex;
+width: 337.156px;
+padding-bottom: 123px;
+flex-direction: column;
+align-items: flex-start;
+gap: 21.797px;
 }
-.{
-    
+.contact-title{
+    color:var(--title);
+font-family: "DM Serif Display";
+font-size: 25px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
 }
-.{
-    
+.contact-address{
+    display: flex;
+width: 337.156px;
+padding: 0.203px 15.953px 0.797px 0.203px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 29px;
+}
+.contact-link{
+    color:var(--text);
+font-family: Jost;
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+}
+.footer-copyright{
+    border-top: var(--border) solid 1px;
+}
+.copyright-title{
+    color:var(--text);
+    text-align: center;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.22px;
+}
+.copyright-span{
+    color:var(--rare);
+font-family: Jost;
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
 }
