--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.72px;
 padding: 22px 67px 22px 34px;
+background-color: var(--title);
+border-radius: 18px;
 }
 .information-list{
     display: flex;
