--- a/css/style.css
+++ b/css/style.css
@@ -216,14 +216,14 @@ background:var(--title);
     padding-bottom: 140.61px;
 }
 .review-box{
+    padding-bottom: 120.39px;
+    padding-top: 103px;
     border-radius: 70px;
 background:var(--background);
-height: 675px;
 }
 .reviews-box{
     display: flex;
 padding-right: 49.125px;
-margin: 49.61px 30px 0px 35px;
 }
 .rev-box{
     display: flex;
@@ -244,17 +244,15 @@ font-weight: 400;
 line-height: 1.3;
 letter-spacing: 0.22px;
 }
-.review-subject{
-    padding-top: 103px;
-}
 .review-heading{
-    padding-bottom: 47px;
+    margin-bottom: 47px;
 }
 .reviews-list{
 display: flex;
 gap: 18px;
 }
 .reviews-item{
+    padding: 49.61px 30px 45px 35px ;
 border-radius: 30px;
 background:var(--main);
 }
@@ -279,7 +277,14 @@ letter-spacing: 0.22px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.22px;
-    margin: 32px 75px 45px 35px;
+    margin-top: 25.39px;
+    width: 244px;
+}
+.reviews-world{
+    width: 256px;
+}
+.reviews-version{
+    width: 274px;
 }
 .main-brands{
     padding-bottom: 100px;
@@ -306,8 +311,8 @@ letter-spacing: 0.22px;
     padding-bottom: 80px;
 }
 .project-box{
-    margin-top: 15px;
-    margin-bottom: 70px;
+    padding-top: 15px;
+    padding-bottom: 70px;
 }
 .project-title{
     margin-bottom: 20px;
