--- a/css/style.css
+++ b/css/style.css
@@ -601,8 +601,7 @@ align-items: center;
     gap: 16px; 
 }
 .gid-box{
-    width: 393.359px;
-height: 374px;
+    padding: 0px 60px 180px 0px;
 }
 .logo-img{
     display: inline-block;
@@ -628,10 +627,8 @@ gap: 40px;
 
 .pages-item{
     display: flex;
-width: 210.719px;
 padding: 0px 60px 30px 0px;
 flex-direction: column;
-align-items: flex-start;
 gap: 21.797px;
 }
 .pages-title{
@@ -644,11 +641,9 @@ gap: 21.797px;
 }
 .pages-box{
     display: flex;
-width: 150.719px;
 height: 285px;
 padding-right: 37.078px;
 flex-direction: column;
-justify-content: center;
 gap: 30px;
 }
 .pages-text{
@@ -663,7 +658,6 @@ gap: 30px;
 
 .explore-item{
     display: flex;
-width: 210.719px;
 padding: 0px 60px 30px 0px;
 flex-direction: column;
 gap: 21.797px;
@@ -694,7 +688,6 @@ letter-spacing: 0.22px;
 }
 .contact-item{
     display: flex;
-width: 337.156px;
 padding-bottom: 123px;
 flex-direction: column;
 gap: 21.797px;
@@ -736,7 +729,6 @@ letter-spacing: 0.22px;
 }
 .copyright-span{
     color:var(--rare);
-font-family: Jost;
 font-size: 22px;
 font-weight: 400;
 line-height: 1.5;
