--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ padding-right: 49.125px;
 }
 .rev-box{
     display: flex;
-padding-left: 20px;
+margin-left: 20px;
 flex-direction: column;
 justify-content: center;
 }
@@ -309,7 +309,7 @@ letter-spacing: 0.22px;
 }
 .project-box{
     padding-top: 15px;
-    padding-bottom: 70px;
+    margin-bottom: 70px;
 }
 .project-title{
     margin-bottom: 20px;
@@ -594,13 +594,11 @@ align-items: center;
 }
 .gids-box{
     display: flex;
-    height: 454px;
     padding: 0px 0.047px 80px 0px;
     justify-content: center;
     gap: 16px; 
 }
 .gid-box{
-    padding: 0px 60px 180px 0px;
 }
 .logo-img{
     display: inline-block;
@@ -610,6 +608,7 @@ flex-shrink: 0;
 margin-bottom: 15px;
 }
 .gid-text{
+    width: 326px;
     margin-bottom: 9.8px;
     color:var(--text);
 font-size: 22px;
@@ -619,14 +618,16 @@ letter-spacing: 0.22px;
 }
 .networks-list{
     display: inline-flex;
+    margin-right: 75.64px;
 padding: 19.203px 152.359px 14.797px 0px;
 align-items: center;
 gap: 40px;
 }
-
+.pages-list{
+    margin-right: 119px;
+}
 .pages-item{
     display: flex;
-padding: 0px 60px 30px 0px;
 flex-direction: column;
 gap: 21.797px;
 }
@@ -640,24 +641,22 @@ gap: 21.797px;
 }
 .pages-box{
     display: flex;
-height: 285px;
-padding-right: 37.078px;
-flex-direction: column;
-gap: 30px;
-}
-.pages-text{
-    display: flex;
-width: 150.719px;
-height: 285px;
-padding-right: 37.078px;
 flex-direction: column;
 justify-content: center;
 gap: 30px;
 }
-
+.pages-link{
+color:var(--text);
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+}
+.explore-list{
+    margin-right: 103px;
+}
 .explore-item{
     display: flex;
-padding: 0px 60px 30px 0px;
 flex-direction: column;
 gap: 21.797px;
 }
@@ -671,23 +670,23 @@ letter-spacing: 0.22px;
 }
 .explore-box{
     display: flex;
-width: 150.719px;
-height: 285px;
-padding-right: 26.797px;
 flex-direction: column;
 justify-content: center;
 gap: 30px;
 }
-.explore-text{
+.explore-link{
+    width: 124px;
     color:var(--text);
 font-size: 22px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.22px;
 }
+.contact-list{
+    margin-left: auto;
+}
 .contact-item{
     display: flex;
-padding-bottom: 123px;
 flex-direction: column;
 gap: 21.797px;
 }
@@ -701,8 +700,6 @@ letter-spacing: 0.22px;
 }
 .contact-address{
     display: flex;
-width: 337.156px;
-padding: 0.203px 15.953px 0.797px 0.203px;
 flex-direction: column;
 justify-content: center;
 gap: 29px;
